--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -14,7 +14,7 @@
                         <a href="/" class="foot-logo"><h3>DEWS</h3></a>
                     </div><!-- end footer-logo -->
                     <ul class="list-items contact-links pt-3">
-                        <li><span class="d-block text-color mb-1"><i class="la la-map mr-1 text-color-2"></i>Address:</span> 12345 Little Baker St, Melbourne</li>
+                        <li><span class="d-block text-color mb-1"><i class="la la-map mr-1 text-color-2"></i>Address:</span> Federal University of Technology Minna</li>
                         <li><span class="d-block text-color mb-1"><i class="la la-phone mr-1 text-color-2"></i>Phone:</span><a href="#">+ 61 23 8093 3400</a></li>
                         <li><span class="d-block text-color mb-1"><i class="la la-envelope mr-1 text-color-2"></i>Email:</span><a href="#">DEWS@gmail.com</a></li>
                     </ul>
@@ -38,9 +38,9 @@
                     <h4 class="footer__title">Quick Actions</h4>
                     <div class="stroke-shape mb-3"></div>
                     <ul class="list-items">
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Sign Up</a></li>
-                        <li><a href="#">Run Prediction</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#loginModal">Login</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#signUpModal">Sign Up</a></li>
+                        <li><a href="/map">Run Prediction</a></li>
                     </ul>
                 </div><!-- end footer-item -->
             </div><!-- end col-lg-3 -->
