--- a/views/partials/team-section.hbs
+++ b/views/partials/team-section.hbs
@@ -1,20 +1,118 @@
-<!--Team Section-->
-<section class="team-section">
-    <div class="bottom-rotten-curve"></div>
+<!-- ================================
+    START TEAM AREA
+================================= -->
+<section class="team-area bg-gray section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-heading text-center">
+                    <h2 class="sec__title">Our Expert Team Members <br> Who Lead DEWS</h2>
+                    
+                </div><!-- end section-heading -->
+            </div><!-- end col-lg-12 -->
+        </div><!-- end row -->
+        <div class="row mt-5">
+            
+            <div class="col-lg-3 responsive-column">
+                <div class="card-item card-item-layout-2 hover-y">
+                    <div class="card-image after-none">
+                        <img src="images/img-loading.html" data-src="images/1.jpeg" class="card__img lazy" alt="Team member image">
+                        <svg class="small-wave-shape" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 1200 415" preserveAspectRatio="none"><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="700"><path class="bg-gray-1" fill-opacity="0.2" d="M5.68434189e-13,292.788567 C80.6666667,271.41188 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C788.879994,215.494242 940.849865,-5.02123357 1200,0.788566864 C1200,33.4552335 1200,171.525711 1200,415 L9.19819776e-13,414.788567 L5.68434189e-13,292.788567 Z"></path></g><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="500"><path class="bg-gray-1" fill-opacity="0.6" d="M2.08355555e-12,332.788567 C80.6666667,284.745214 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.08369,215.39446 940.387018,21.5609115 1200,37.7885669 C1200,55.7885669 1200,181.525711 1200,415 L1.8189894e-12,414.788567 L2.08355555e-12,332.788567 Z"></path></g><path class="bg-gray-1" d="M9.09494702e-13,373.771254 C80.6666667,298.406109 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.088175,215.392262 940.369069,48.85905 1200,74.7885669 C1200,148.788567 1200,262.192378 1200,415 L1.0227342e-12,414.788567 L9.09494702e-13,373.771254 Z"></path><defs></defs></svg>
+                    </div><!-- end card-image -->
+                    {{!-- <div class="card-content pt-3">
+                        <h4 class="card-title mb-0"><a href="#">Kamal Ahmed</a></h4>
+                        <p class="card-sub font-size-14">Business Consultant</p>
+                        <ul class="social-profile social-profile-styled pt-4">
+                            <li><a href="#" class="facebook-bg"><i class="la la-facebook"></i></a></li>
+                            <li><a href="#" class="twitter-bg"><i class="la la-twitter"></i></a></li>
+                            <li><a href="#" class="instagram-bg"><i class="la la-instagram"></i></a></li>
+                            <li><a href="#" class="behance-bg"><i class="la la-behance"></i></a></li>
+                        </ul>
+                    </div><!-- end card-content --> --}}
+                </div>
+            </div>
 
-    <div class="auto-container">
+            <div class="col-lg-3 responsive-column">
+                <div class="card-item card-item-layout-2 hover-y">
+                    <div class="card-image after-none">
+                        <img src="images/img-loading.html" data-src="images/2.jpeg" class="card__img lazy" alt="Team member image">
+                        <svg class="small-wave-shape" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 1200 415" preserveAspectRatio="none"><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="700"><path class="bg-gray-1" fill-opacity="0.2" d="M5.68434189e-13,292.788567 C80.6666667,271.41188 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C788.879994,215.494242 940.849865,-5.02123357 1200,0.788566864 C1200,33.4552335 1200,171.525711 1200,415 L9.19819776e-13,414.788567 L5.68434189e-13,292.788567 Z"></path></g><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="500"><path class="bg-gray-1" fill-opacity="0.6" d="M2.08355555e-12,332.788567 C80.6666667,284.745214 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.08369,215.39446 940.387018,21.5609115 1200,37.7885669 C1200,55.7885669 1200,181.525711 1200,415 L1.8189894e-12,414.788567 L2.08355555e-12,332.788567 Z"></path></g><path class="bg-gray-1" d="M9.09494702e-13,373.771254 C80.6666667,298.406109 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.088175,215.392262 940.369069,48.85905 1200,74.7885669 C1200,148.788567 1200,262.192378 1200,415 L1.0227342e-12,414.788567 L9.09494702e-13,373.771254 Z"></path><defs></defs></svg>
+                    </div><!-- end card-image -->
+                    {{!-- <div class="card-content pt-3">
+                        <h4 class="card-title mb-0"><a href="#">Kamal Ahmed</a></h4>
+                        <p class="card-sub font-size-14">Business Consultant</p>
+                        <ul class="social-profile social-profile-styled pt-4">
+                            <li><a href="#" class="facebook-bg"><i class="la la-facebook"></i></a></li>
+                            <li><a href="#" class="twitter-bg"><i class="la la-twitter"></i></a></li>
+                            <li><a href="#" class="instagram-bg"><i class="la la-instagram"></i></a></li>
+                            <li><a href="#" class="behance-bg"><i class="la la-behance"></i></a></li>
+                        </ul>
+                    </div><!-- end card-content --> --}}
+                </div>
+            </div>
 
-        <div class="sec-title centered">
-            <div class="sub-title">Meet Our Team</div>
-            <h2>Our Volunteers</h2>
-            <div class="text">These are the people that help make everything work!</div>
-        </div>
+            <div class="col-lg-3 responsive-column">
+                <div class="card-item card-item-layout-2 hover-y">
+                    <div class="card-image after-none">
+                        <img src="images/img-loading.html" data-src="images/3.jpeg" class="card__img lazy" alt="Team member image">
+                        <svg class="small-wave-shape" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 1200 415" preserveAspectRatio="none"><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="700"><path class="bg-gray-1" fill-opacity="0.2" d="M5.68434189e-13,292.788567 C80.6666667,271.41188 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C788.879994,215.494242 940.849865,-5.02123357 1200,0.788566864 C1200,33.4552335 1200,171.525711 1200,415 L9.19819776e-13,414.788567 L5.68434189e-13,292.788567 Z"></path></g><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="500"><path class="bg-gray-1" fill-opacity="0.6" d="M2.08355555e-12,332.788567 C80.6666667,284.745214 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.08369,215.39446 940.387018,21.5609115 1200,37.7885669 C1200,55.7885669 1200,181.525711 1200,415 L1.8189894e-12,414.788567 L2.08355555e-12,332.788567 Z"></path></g><path class="bg-gray-1" d="M9.09494702e-13,373.771254 C80.6666667,298.406109 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.088175,215.392262 940.369069,48.85905 1200,74.7885669 C1200,148.788567 1200,262.192378 1200,415 L1.0227342e-12,414.788567 L9.09494702e-13,373.771254 Z"></path><defs></defs></svg>
+                    </div><!-- end card-image -->
+                    {{!-- <div class="card-content pt-3">
+                        <h4 class="card-title mb-0"><a href="#">Kamal Ahmed</a></h4>
+                        <p class="card-sub font-size-14">Business Consultant</p>
+                        <ul class="social-profile social-profile-styled pt-4">
+                            <li><a href="#" class="facebook-bg"><i class="la la-facebook"></i></a></li>
+                            <li><a href="#" class="twitter-bg"><i class="la la-twitter"></i></a></li>
+                            <li><a href="#" class="instagram-bg"><i class="la la-instagram"></i></a></li>
+                            <li><a href="#" class="behance-bg"><i class="la la-behance"></i></a></li>
+                        </ul>
+                    </div><!-- end card-content --> --}}
+                </div>
+            </div>
 
-        <div class="row clearfix">
-            {{#forEach data.team}}
-            {{> team-card }}
-            {{/forEach}}
-        </div>
+            <div class="col-lg-3 responsive-column">
+                <div class="card-item card-item-layout-2 hover-y">
+                    <div class="card-image after-none">
+                        <img src="images/img-loading.html" data-src="images/4.jpeg" class="card__img lazy" alt="Team member image">
+                        <svg class="small-wave-shape" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 1200 415" preserveAspectRatio="none"><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="700"><path class="bg-gray-1" fill-opacity="0.2" d="M5.68434189e-13,292.788567 C80.6666667,271.41188 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C788.879994,215.494242 940.849865,-5.02123357 1200,0.788566864 C1200,33.4552335 1200,171.525711 1200,415 L9.19819776e-13,414.788567 L5.68434189e-13,292.788567 Z"></path></g><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="500"><path class="bg-gray-1" fill-opacity="0.6" d="M2.08355555e-12,332.788567 C80.6666667,284.745214 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.08369,215.39446 940.387018,21.5609115 1200,37.7885669 C1200,55.7885669 1200,181.525711 1200,415 L1.8189894e-12,414.788567 L2.08355555e-12,332.788567 Z"></path></g><path class="bg-gray-1" d="M9.09494702e-13,373.771254 C80.6666667,298.406109 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.088175,215.392262 940.369069,48.85905 1200,74.7885669 C1200,148.788567 1200,262.192378 1200,415 L1.0227342e-12,414.788567 L9.09494702e-13,373.771254 Z"></path><defs></defs></svg>
+                    </div><!-- end card-image -->
+                    {{!-- <div class="card-content pt-3">
+                        <h4 class="card-title mb-0"><a href="#">Kamal Ahmed</a></h4>
+                        <p class="card-sub font-size-14">Business Consultant</p>
+                        <ul class="social-profile social-profile-styled pt-4">
+                            <li><a href="#" class="facebook-bg"><i class="la la-facebook"></i></a></li>
+                            <li><a href="#" class="twitter-bg"><i class="la la-twitter"></i></a></li>
+                            <li><a href="#" class="instagram-bg"><i class="la la-instagram"></i></a></li>
+                            <li><a href="#" class="behance-bg"><i class="la la-behance"></i></a></li>
+                        </ul>
+                    </div><!-- end card-content --> --}}
+                </div>
+            </div>
 
-    </div>
-</section>
+            <div class="col-lg-3 responsive-column">
+                <div class="card-item card-item-layout-2 hover-y">
+                    <div class="card-image after-none">
+                        <img src="images/img-loading.html" data-src="images/5.jpeg" class="card__img lazy" alt="Team member image">
+                        <svg class="small-wave-shape" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 1200 415" preserveAspectRatio="none"><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="700"><path class="bg-gray-1" fill-opacity="0.2" d="M5.68434189e-13,292.788567 C80.6666667,271.41188 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C788.879994,215.494242 940.849865,-5.02123357 1200,0.788566864 C1200,33.4552335 1200,171.525711 1200,415 L9.19819776e-13,414.788567 L5.68434189e-13,292.788567 Z"></path></g><g class="pix-waiting animated" data-anim-type="fade-in-up" data-anim-delay="500"><path class="bg-gray-1" fill-opacity="0.6" d="M2.08355555e-12,332.788567 C80.6666667,284.745214 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.08369,215.39446 940.387018,21.5609115 1200,37.7885669 C1200,55.7885669 1200,181.525711 1200,415 L1.8189894e-12,414.788567 L2.08355555e-12,332.788567 Z"></path></g><path class="bg-gray-1" d="M9.09494702e-13,373.771254 C80.6666667,298.406109 159.333333,260.723537 236,260.723537 C421,260.723537 525,344.759008 670,273.729027 C789.088175,215.392262 940.369069,48.85905 1200,74.7885669 C1200,148.788567 1200,262.192378 1200,415 L1.0227342e-12,414.788567 L9.09494702e-13,373.771254 Z"></path><defs></defs></svg>
+                    </div><!-- end card-image -->
+                    {{!-- <div class="card-content pt-3">
+                        <h4 class="card-title mb-0"><a href="#">Kamal Ahmed</a></h4>
+                        <p class="card-sub font-size-14">Business Consultant</p>
+                        <ul class="social-profile social-profile-styled pt-4">
+                            <li><a href="#" class="facebook-bg"><i class="la la-facebook"></i></a></li>
+                            <li><a href="#" class="twitter-bg"><i class="la la-twitter"></i></a></li>
+                            <li><a href="#" class="instagram-bg"><i class="la la-instagram"></i></a></li>
+                            <li><a href="#" class="behance-bg"><i class="la la-behance"></i></a></li>
+                        </ul>
+                    </div><!-- end card-content --> --}}
+                </div>
+            </div>
+
+    
+        </div><!-- end row -->
+
+    </div><!-- end container -->
+</section><!-- end team-area -->
+<!-- ================================
+    END TEAM AREA
+================================= -->
