--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -66,7 +66,7 @@
                                 <div class="card-header" id="headingTwo">
                                     <h5>
                                         <button class="btn btn-link d-flex align-items-center justify-content-between" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            Can I create a free listing?
+                                            Can I Predict for free?
                                             <i class="la la-minus"></i>
                                             <i class="la la-plus"></i>
                                         </button>
@@ -82,7 +82,7 @@
                                 <div class="card-header" id="headingThree">
                                     <h5>
                                         <button class="btn btn-link d-flex align-items-center justify-content-between" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                            How much time does it take to get approval?
+                                            How much time does it take to get Predictions?
                                             <i class="la la-minus"></i>
                                             <i class="la la-plus"></i>
                                         </button>
@@ -94,54 +94,7 @@
                                     </div>
                                 </div>
                             </div><!-- end card -->
-                            <div class="card">
-                                <div class="card-header" id="headingFour">
-                                    <h5>
-                                        <button class="btn btn-link d-flex align-items-center justify-content-between" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                            Do I have to commit to a yearly subscription?
-                                            <i class="la la-minus"></i>
-                                            <i class="la la-plus"></i>
-                                        </button>
-                                    </h5>
-                                </div>
-                                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-                                    <div class="card-body">
-                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.</p>
-                                    </div>
-                                </div>
-                            </div><!-- end card -->
-                            <div class="card">
-                                <div class="card-header" id="headingFive">
-                                    <h5>
-                                        <button class="btn btn-link d-flex align-items-center justify-content-between" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                            Is my listing secure?
-                                            <i class="la la-minus"></i>
-                                            <i class="la la-plus"></i>
-                                        </button>
-                                    </h5>
-                                </div>
-                                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
-                                    <div class="card-body">
-                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.</p>
-                                    </div>
-                                </div>
-                            </div><!-- end card -->
-                            <div class="card">
-                                <div class="card-header" id="headingSix">
-                                    <h5>
-                                        <button class="btn btn-link d-flex align-items-center justify-content-between" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                            Why people chose this listing?
-                                            <i class="la la-minus"></i>
-                                            <i class="la la-plus"></i>
-                                        </button>
-                                    </h5>
-                                </div>
-                                <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
-                                    <div class="card-body">
-                                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.</p>
-                                    </div>
-                                </div>
-                            </div><!-- end card -->
+                     
 
                         </div><!-- end accordion-item -->
                     </div><!-- end page-scroll -->
