--- a/views/index.hbs
+++ b/views/index.hbs
@@ -99,6 +99,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
+                <img src="/images/tetfund.png" class="img-fluid" />
+            </div>
+            <div class="col-lg-12">
                 <div class="section-heading text-center">
                     <div class="section-icon gradient-icon mb-3 mx-auto">
                         <svg id="Layer_1" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
