--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -40,8 +40,8 @@
                     <div class="menu-full-width">
                         <div class="logo">
                             <a href="/">
-                                <!-- <img src="images/logo-white.png" alt="logo"> -->
-                                <h3 class="text-white">DEWS</h3>
+                                <img src="images/tetfund.png" alt="logo" class="img-fluid" width="100px">
+                                {{!-- <h3 class="text-white">DEWS</h3> --}}
                             </a>
                             <div class="d-flex align-items-center">
                                 <div class="menu-toggle">
