--- a/views/index.hbs
+++ b/views/index.hbs
@@ -172,4 +172,6 @@
 <!-- ================================
     END HIW AREA
 ================================= -->
+
+{{>team-section}}
 {{>footer}}
