--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -27,7 +27,7 @@
                     <ul class="list-items">
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/map">Map</a></li>
-                        <li><a href="/contact">COntact Us</a></li>
+                        <li><a href="/contact">Contact Us</a></li>
                         <li><a href="/faq">FAQ</a></li>
                         <li><a href="/team">Team Members</a></li>
                     </ul>
