--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -139,6 +139,32 @@
 </div>
 
 <!-- Modal -->
+<div class="modal fade" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="resultModal" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Prediction Results</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p><strong>State : </strong><span class="state_res"></span></p>
+        <p><strong>Year : </strong><span class="year_res"></span></p>
+        <p><strong>Drought Index : </strong><span class="drought_index"></span></p>
+        <p><strong>Ocean Temperature : </strong><span class="ocean_temp"></span></p>
+        <p><strong>Climate Direction : </strong><span class="climate_dir"></span></p>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
 <div class="modal fade modal-container recover-form" id="recoverModal" tabindex="-1" role="dialog" aria-labelledby="recoverModalTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
