Updated Prediction to accomodate new API Changes

--- a/views/map.hbs
+++ b/views/map.hbs
@@ -87,7 +87,7 @@
                   <text style="cursor: pointer;" id="Kogi" transform="translate(400.862 737.848)" fill="#e7ebef" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">Kogi</tspan></text>
                   <text style="cursor: pointer;" id="FCT" transform="translate(501.862 615.848)" fill="#e7ebef" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">FCT</tspan></text>
                   <text style="cursor: pointer;" id="Plateau" transform="translate(771.862 593.848)" fill="#e7ebef" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">Plateau</tspan></text>
-                  <text style="cursor: pointer;" id="Nasarawa" transform="translate(586.862 651.848)" fill="#e7ebef" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">Nasarawa</tspan></text>
+                  <text style="cursor: pointer;" id="Nassarawa" transform="translate(586.862 651.848)" fill="#e7ebef" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">Nassarawa</tspan></text>
                   <text style="cursor: pointer;" id="Bauchi" transform="translate(796.862 426.848)" fill="#e7ebef" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">Bauchi</tspan></text>
                   <text style="cursor: pointer;" id="Gombe" transform="translate(947.862 397.848)" fill="#e7ebef" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">Gombe</tspan></text>
                   <text style="cursor: pointer;" id="Adamawa" transform="translate(1099.862 507.848)" fill="#e7ebef" font-size="30" font-family="SegoeUI, Segoe UI"><tspan x="0" y="0">Adamawa</tspan></text>
