--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -26,7 +26,7 @@
                     <div class="stroke-shape mb-3"></div>
                     <ul class="list-items">
                         <li><a href="/about">About Us</a></li>
-                        <li><a href="/map">Map</a></li>
+                        <li><a href="/map">Prediction</a></li>
                         <li><a href="/contact">Contact Us</a></li>
                         <li><a href="/faq">FAQ</a></li>
                         <li><a href="/team">Team Members</a></li>
