--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -148,13 +148,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <p><strong>State : </strong><span class="state_res"></span></p>
-        <p><strong>Year : </strong><span class="year_res"></span></p>
-        <p><strong>Drought Index : </strong><span class="drought_index"></span></p>
-        <p><strong>Ocean Temperature : </strong><span class="ocean_temp"></span></p>
-        <p><strong>Climate Direction : </strong><span class="climate_dir"></span></p>
-
+      <div class="modal-body pred">
 
       </div>
       <div class="modal-footer">
