--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,11 +26,8 @@
                     </div>
                 </div><!-- end hero-heading -->
                 <div class="text-center mt-5">
-                    <a href="#" class="theme-btn gradient-btn shadow-none add-listing-btn-hide"  data-toggle="modal" data-target="#loginModal">
-                        <i class="la la-plus mr-2"></i>Login
-                    </a>
-                    <a href="#" class="theme-btn gradient-btn shadow-none add-listing-btn-hide"  data-toggle="modal" data-target="#signUpModal">
-                        <i class="la la-plus mr-2"></i>Sign Up
+                    <a href="/map" class="theme-btn gradient-btn shadow-none add-listing-btn-hide">
+                        <i class="la la-plus mr-2"></i>Run Prediction
                     </a>
                 </div><!-- end main-search-input -->
                 <div class="highlighted-categories">
