--- a/views/prediction.hbs
+++ b/views/prediction.hbs
@@ -92,6 +92,7 @@
                 return res.json()
             }).then(data => {
                 let modal_body = document.querySelector('.modal-body.pred');
+                modal_body.innerHTML = "";
                 const keys = Object.keys(data);
                 
                 keys.forEach((key, index) => {
