Added requested changes

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,8 +1,8 @@
 <!-- ================================
             START HEADER AREA
 ================================= -->
-<header class="header-area">
-    <div class="header-top-bar bg-dark-opacity py-2 padding-right-30px padding-left-30px">
+<header class="header-area" style="background-color: #333f57;">
+    <div class="header-top-bar py-2 padding-right-30px padding-left-30px">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 d-flex align-items-center header-top-info font-size-14">
@@ -39,9 +39,9 @@
                 <div class="col-lg-12">
                     <div class="menu-full-width">
                         <div class="logo">
-                            <a href="/">
-                                {{!-- <img src="images/tetfund.png" alt="logo" class="img-fluid" width="100px"> --}}
+                            <a href="/" style="display: inline-flex;">
                                 <h3 class="text-white">DEWS</h3>
+                                <img src="images/tetfund.png" alt="logo" class="img-fluid ml-2" width="120px" height="auto">
                             </a>
                             <div class="d-flex align-items-center">
                                 <div class="menu-toggle">
