--- a/views/map.hbs
+++ b/views/map.hbs
@@ -1,55 +1,13 @@
 {{> header }}
 
 <!-- ================================
-    START HERO-WRAPPER AREA
-================================= -->
-<section class="hero-wrapper overflow-hidden">
-    <div class="overlay"></div><!-- end overlay -->
-    <div id="fullscreen-slide-container">
-        <ul class="slides-container">
-            <li><img class="lazy" src="images/img-loading.html" data-src="images/banner1.jpg" alt=""></li>
-            <li><img class="lazy" src="images/img-loading.html" data-src="images/banner1.jpg" alt=""></li>
-            <li><img class="lazy" src="images/img-loading.html" data-src="images/banner1.jpg" alt=""></li>
-        </ul>
-    </div><!-- End fullscreen-slide-container -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="hero-heading text-center">
-                    <div class="section-heading">
-                        <h2 class="sec__title cd-headline slide">
-                            MAP
-                        </h2>
-                        <p>Slect A State to Get Started</p>
-                    </div>
-                    <div class="section-body">
-                        
-                    </div>
-                </div><!-- end hero-heading -->
-            </div><!-- end col-lg-12 -->
-        </div><!-- end row -->
-    </div><!-- end container -->
-    <div class="svg-bg">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
-            <path fill="#F5F7FC" class="elementor-shape-fill" d="M500,97C126.7,96.3,0.8,19.8,0,0v100l1000,0V1C1000,19.4,873.3,97.8,500,97z"></path>
-        </svg>
-    </div>
-</section><!-- end hero-wrapper -->
-<!-- ================================
-    END HERO-WRAPPER AREA
-================================= -->
-
-
-
-
-<!-- ================================
     START HIW AREA
 ================================= -->
 <section class="hiw-area padding-top-100px bg-gradient-gray hiw-bottom-left-round">
     <div class="container">
 
         <div class="row padding-top-60px">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1410.894" height="895.939" viewBox="0 0 1410.894 895.939">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="auto" viewBox="0 0 1410.894 895.939" style="margin-top: 15%;">
                 <g id="ng" transform="translate(-4.3)">
                   <path onClick="alert('clicked')" id="NGA2839" d="M995.954,350.232l-6.948.425-17.156,3.686-3.828-.425-3.828-1.418-1.276-1.134-1.7-.284-3.97.567-.993,6.806v8.223l-1.56,8.365-6.522,16.163-4.112,16.021-5.955,3.261-8.082-1.7-6.947-4.537-6.522-5.813-7.94-3.545-10.208-1.418-9.641,2.269-6.38,7.514-6.947,6.238-4.4.284-2.977,2.269-2.127,4.253-3.261,3.686-8.507,3.828-9.5.993-8.507,1.843-6.806,5.813-12.193,15.88L802.137,458.98l-19-.992-8.365-5.388-7.94-12.9-4.4-2.836-5.1-1.985-4.4-3.119-3.686-4.537-2.552-5.246.284-5.246,8.791-14.32-1.56-10.35,4.679-1.276,3.545-2.977,2.836-3.545,1.276-4.253L765.7,369.94l1.7-9.641,6.664-7.373,27.789-9.783,7.373-5.53,3.545-8.223-.567-10.208.567-10.208,2.552-3.828,3.261-3.4,4.821-8.79,11.91-14.887-.567-4.4-2.127-4.253-3.4-3.97-4.821-1.56-3.97.567-3.119-.992.709-4.821,7.089-14.036.567-5.388-2.836-12.051,5.53-40.55-2.41-18.148,12.9-12.335L844.1,148.9l2.977-7.373-.992-7.514-6.38-4.679-5.246-5.813-2.127-7.8,2.836-23.394,3.261.142,2.694.425,2.268.851,1.843.425,1.7-.851.567-1.418.992-6.522.567-.425,3.545-.709,1.56-2.41.709-2.694-1.843-.709.851-1.7,1.418-2.269.425-1.985,4.254-4.112h1.843l1.7-1.418.284-2.694,3.4,2.836,1.843.425.992-.709.851-2.694,1.418-.709,2.694-.567,1.843-1.56,3.119-3.686,1.276-2.552,1.56,1.843,1.7-.142-1.276-2.836.284-.425,2.41-.992,1.559-.284-.142-1.276,3.261-3.686,1.56-1.276-1.418-1.7-1.843-.709v-.992l3.261,1.276L893.3,43.7l.425-1.985,3.4.709,3.261-.567,10.492-5.388L914,35.333l3.261-.142-.709,1.843,1.276.567,2.268-.142,1.985-.709.851.851.851-1.985.709-.425,1.134.142.284.992-.709,2.127,3.119-1.418,3.261-.567,2.836-.992,2.127-2.836-1.7-.284-.284-.567,1.134-1.7,2.127-.284.284-.992-.709-1.56.709-1.7.709-.992,4.821-4.537,1.7-1.276V16.76l.992-.992,3.545-.567,29.207,1.276,26.939,38,27.08,38,13.186,64.369.142,9.358.851,2.552v2.41l-.709,3.686v1.418l1.134,1.843,1.56.851,1.843.425,24.245.709,7.515,1.985,3.261,1.7.284,1.134-.567,1.843.284,1.134.851.851,3.4,2.552,1.276.567v.992l-1.559.709,2.268,1.7,2.41,1.276,1.843,1.56.851,2.552.567.567,4.254-1.843,1.418.709.709,2.552-2.268,2.269-1.56,2.836-2.127,8.649.284,1.276-2.127,1.418.284,2.41,2.268,5.1.142,2.269-.425,3.97-1.276,3.828L1095.06,249l-.851,1.985-4.4,5.813-.567.992.284.992.992,1.56,2.552.142.851.567,1.56,2.41,1.843,1.985,1.418,1.985.567,2.41.142,3.119-.425,2.41-.993,2.977-1.134,2.977-1.418,2.127-2.127,1.134-6.1,2.268-2.41,1.418-4.4,3.97-2.41,1.418-6.948,2.268-2.268,1.276-10.492,9.783-.992.284-3.119.425-1.418.567-3.261,3.4-2.127,1.56-2.552,1.418-2.552.567-2.41-.284-8.365-3.545L1027,309.966h-3.686l-4.537,3.686-4.4,4.537-3.97,4.962-2.836,5.1-1.985,4.821-1.418,1.843-4.537,2.552-1.843,1.7-1.276,2.127-.567,2.41.851,4.537-.851,1.985Z" transform="translate(309.777 5.933)" fill="#002147" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
                   <path id="NGA2846" d="M599.221,514.411l-6.5,9.679,1.414,2.525,3.677-.7,7.919-3.647,4.666-.842,18.1-.561,17.959,2.1,13.292,9.118,10.606,13.186,12.02,10.661L687.6,569.54l-4.667,14.168-.848,13.888L677,602.365l-5.939,4.208-4.808,5.892-3.535,6.874-3.818,20.481.424,7.435-1.414,19.779L655.077,678.4h-1.414l-3.535.7-1.7,1.543-2.687,5.19-1.98,1.824-2.4,1.122-4.666,1.824-2.263-3.788-3.394-6.172-14-16.412L606.574,658.9,588.05,662.4l-6.646.14-3.252-.7-2.262-1.964,1.131-7.014-2.828-6.032-14.141-8.276-8.484-2.946-8.06-.7-7.636,2.806-1.555,3.787,1.131,4.489-1.98,3.367-3.959,2.1-4.949,1.263-5.232.14-4.666-.842h-4.666l-3.394,2.525-3.252,3.507-3.535,1.824-3.818.421-2.687-3.086-1.556-3.928L490.9,648.8l-1.273-1.964-2.4-.14-.566,1.263-1.273,1.824H482.7l-2.687.561-4.384,5.751-4.525,1.122H466.44l-4.949.7-1.838,3.928-1.131,9.819-5.232,7.014-8.06-4.91-3.818-8.136,3.959-10.942v-5.751l-1.273-5.611-2.97-4.769-4.808-2.385-4.242,1.122-3.535,2.665-4.666.561-4.525-2.1-4.384-3.227-3.959-3.647-3.252-4.068-4.525-9.4-1.131-4.769,4.525,2.244,4.949,4.068,3.818,1.824,3.111-.982.424-5.331,1.838-4.629,15.7-8.557,4.808-8,2.121-9.539.283-3.787,1.414-3.367,2.4-4.068-2.97-2.1-4.525.561-3.818-1.964-1.414-4.629-1.838-14.168.283-13.607-.424-4.208-2.4-4.208-3.394-3.507-3.535-5.05-1.414-6.032-.283-6.172.566-6.733,5.939,1.4,7.636.842,5.656,1.964,3.959.842,8.343.982,4.1,1.122,5.8,3.507,1.98.7,9.9,1.683,3.252,1.262,6.363,3.226,3.677,1.122,3.818.421,3.394.982,2.687,2.806,5.373,3.086,2.97,2.244,1.414.7,2.262.561L512.4,529l-.848-4.208-5.515-12.064-2.687-8.557,1.838-8.276,6.646-5.471,15.413-1.824L551,496.456l8.626,1.964,12.868.421,4.242-.421v-.561l22.484,16.553Z" transform="translate(168.262 203.248)" fill="#002147" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
